@@ -145,6 +145,9 @@
 - optimize smarty_function_escape_special_chars() for PHP >= 5.2.3
 
 ===== SVN 3.0 trunk  =====
+14/05/2011
+- bugfix error handling at stream resources
+
 13/05/2011
 - bugfix condition starting with "-" did fail at {if} and {while} tags
 
